compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_opaque_ty_poke_opaque_set_elem_ty.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "module m\n    export opaque ~.* t, ~.* s, make\n    type t : char\n    type s : set of t\n    fcn make(c : char) : t result c end make\nend m\n\n% both should fail, is strictly opaque\ntype xs : set of t\nvar vs : s := s('i')\n\n% should succeed\nvar _ : boolean := m.make('i') in vs\n"
---
"m"@(FileId(1), 7..8) [Module(No)]: <error>
"t"@(FileId(1), 55..56) [Type]: opaque[DefId(LibraryId(0), LocalDefId(1))] type to char
"s"@(FileId(1), 77..85) [Set]: <error>
"s"@(FileId(1), 73..74) [Type]: set[DefId(LibraryId(0), LocalDefId(2))] of opaque[DefId(LibraryId(0), LocalDefId(1))] type to char
"make"@(FileId(1), 94..98) [Subprogram(Function)]: function ( pass(value) char, ) -> opaque[DefId(LibraryId(0), LocalDefId(1))] type to char
"<unnamed>"@(dummy) [Undeclared]: <error>
"c"@(FileId(1), 99..100) [Param(Value, No)]: char
"t"@(FileId(1), 31..32) [Export]: opaque[DefId(LibraryId(0), LocalDefId(1))] type to char
"s"@(FileId(1), 38..39) [Export]: set[DefId(LibraryId(0), LocalDefId(2))] of opaque[DefId(LibraryId(0), LocalDefId(1))] type to char
"make"@(FileId(1), 41..45) [Export]: function ( pass(value) char, ) -> opaque[DefId(LibraryId(0), LocalDefId(1))] type to char
"xs"@(FileId(1), 187..195) [Set]: <error>
"xs"@(FileId(1), 182..184) [Type]: set[DefId(LibraryId(0), LocalDefId(10))] of opaque[DefId(LibraryId(0), LocalDefId(1))] type to char
"vs"@(FileId(1), 200..202) [ConstVar(Var, No)]: set[DefId(LibraryId(0), LocalDefId(2))] of opaque[DefId(LibraryId(0), LocalDefId(1))] type to char
"_"@(FileId(1), 239..240) [ConstVar(Var, No)]: boolean
"<root>"@(dummy) [Module(No)]: <error>

error in file FileId(1) at 194..195: mismatched types
| error in file FileId(1) for 194..195: `t (an opaque type)` is not an index type
| info: an index type is an integer, a `boolean`, a `char`, an enumerated type, or a range
error in file FileId(1) at 212..215: mismatched types
| note in file FileId(1) for 212..215: this is of type `char`
| note in file FileId(1) for 212..215: parameter expects type `t (an opaque type)`
| info: `char` is not assignable into `t (an opaque type)`
