compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_pointer_ty_nested.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "type _ : unchecked ^ unchecked ^ int"

---
"_"@(FileId(1), 5..6) [Resolved(Type)]: alias[DefId(LibraryId(0), LocalDefId(0))] of unchecked pointer to unchecked pointer to int
"<root>"@(dummy) [Declared]: <error>

