compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_pointer_ty_normal.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "type _ : ^int"
---
"_"@(FileId(1), 5..6) [Type]: alias[DefId(LibraryId(0), LocalDefId(0))] of pointer to int
"<root>"@(dummy) [Module(No)]: <error>

