compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_pointer_ty_to_err.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "type _ : ^"
---
"_"@(FileId(1), 5..6) [Type]: alias[DefId(LibraryId(0), LocalDefId(0))] of pointer to <error>
"<root>"@(dummy) [Module(No)]: <error>

