compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_put_stmt_valid_aliased_types.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "type i : int\nvar o, w, u : i\nput : o, w : o : u : o..\n"

---
"i"@(FileId(1), 5..6) [Resolved(Type)]: alias[DefId(LibraryId(0), LocalDefId(0))] of int
"o"@(FileId(1), 17..18) [Declared]: alias[DefId(LibraryId(0), LocalDefId(0))] of int
"w"@(FileId(1), 20..21) [Declared]: alias[DefId(LibraryId(0), LocalDefId(0))] of int
"u"@(FileId(1), 23..24) [Declared]: alias[DefId(LibraryId(0), LocalDefId(0))] of int
"<root>"@(dummy) [Declared]: <error>

