compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_put_stmt_wrong_type_exp_width.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "var e : real\nput 1 : 0 : 0 : e\n"

---
"e"@(FileId(1), 4..5) [Declared]: ref_mut real
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 29..30: mismatched types
| note in file FileId(1) for 29..30: expected integer type
